p2/k3s/app-1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  labels:
    app: app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: echo
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
