p2/k3s/app-2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - name: echo
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
