p2/k3s/app-3-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-3
  labels:
    app: app-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-3
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
      - name: echo
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
