p2/k3s/app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1
spec:
  selector:
    app: app-1
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
