p2/k3s/app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2
spec:
  selector:
    app: app-2
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
