p2/k3s/app-3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-3
spec:
  selector:
    app: app-3
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
