p2/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: traefik

  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-1
                port:
                  number: 80

    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-2
                port:
                  number: 80

    - host: app3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-3
                port:
                  number: 80
